[gd_scene load_steps=7 format=3 uid="uid://b5hidq7fuopte"]

[ext_resource type="Script" path="res://scripts/ui/UI.gd" id="2"]
[ext_resource type="Script" path="res://scripts/ui/Upgrades.gd" id="2_hbawy"]
[ext_resource type="Texture2D" uid="uid://cxsocupwk1n0k" path="res://images/uigraphics/upgradePanel/panelBG.png" id="2_uey1n"]
[ext_resource type="FontFile" uid="uid://dc8dkaxhhekhr" path="res://images/uigraphics/DIN Condensed Bold.ttf" id="3_oc6jy"]
[ext_resource type="PackedScene" uid="uid://dkbmvhbvo33hn" path="res://scenes/ui/button.tscn" id="4_qfrau"]

[sub_resource type="FontVariation" id="FontVariation_x3ktr"]
base_font = ExtResource("3_oc6jy")
spacing_glyph = 5

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("2")

[node name="XpBar" type="ProgressBar" parent="."]
modulate = Color(1, 1, 1, 0.666667)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -499.0
offset_top = 19.0
offset_right = 492.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 7
size_flags_vertical = 7
max_value = 10.0
step = 0.0

[node name="UpgradeModal" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 578.0
offset_bottom = 373.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_hbawy")

[node name="Background" type="TextureRect" parent="UpgradeModal"]
layout_mode = 2
texture = ExtResource("2_uey1n")
expand_mode = 1

[node name="ButtonsMargin" type="CenterContainer" parent="UpgradeModal"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeModal/ButtonsMargin"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Heading" type="Label" parent="UpgradeModal/ButtonsMargin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = SubResource("FontVariation_x3ktr")
theme_override_font_sizes/font_size = 56
text = " NEW UPGRADES AVAILABLE! "
horizontal_alignment = 1
uppercase = true

[node name="Button1" parent="UpgradeModal/ButtonsMargin/VBoxContainer" instance=ExtResource("4_qfrau")]
layout_mode = 2

[node name="Button2" parent="UpgradeModal/ButtonsMargin/VBoxContainer" instance=ExtResource("4_qfrau")]
layout_mode = 2

[node name="Button3" parent="UpgradeModal/ButtonsMargin/VBoxContainer" instance=ExtResource("4_qfrau")]
layout_mode = 2

[node name="YouDiedModal" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -180.0
offset_right = 512.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="YouDiedModal"]
layout_mode = 2

[node name="Label" type="Label" parent="YouDiedModal/VBoxContainer"]
layout_mode = 2
text = "YOU DIED"

[node name="RestartButton" type="Button" parent="YouDiedModal/VBoxContainer"]
layout_mode = 2
text = "RESTART?"

[connection signal="pressed" from="YouDiedModal/VBoxContainer/RestartButton" to="." method="_on_restartbutton_pressed"]
